--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>vertx-core</artifactId>
             <version>3.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-rx-java</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+
     </dependencies>
 
 
